--- a/Todo/Todo/NewTodo.xaml
+++ b/Todo/Todo/NewTodo.xaml
@@ -13,9 +13,9 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Entry x:Name="nombreEntry" Placeholder="nombre de la tarea" Grid.ColumnSpan="2"/>
-        <DatePicker Grid.Row="1"/>
-        <TimePicker Grid.Row="1" Grid.Column="1"/>
-        <Button Text="Guardar" Grid.Row="2" Grid.ColumnSpan="2" Clicked="Guardar_Todo"/>
+        <DatePicker Grid.Row="1" x:Name="dateline"/>
+        <TimePicker Grid.Row="1" Grid.Column="1" x:Name="timeline"/>
+        <Button Text="Guardar" Grid.Row="2" Grid.ColumnSpan="2" Clicked="Guardar_Todo" x:Name="save"/>
 
     </Grid>
 </ContentPage>
