can add a new Task and mark tasks

--- a/Todo/Todo/ListTask.xaml
+++ b/Todo/Todo/ListTask.xaml
@@ -5,7 +5,11 @@
     <ListView x:Name="listTasksView">
         <ListView.ItemTemplate>
             <DataTemplate>
-                <TextCell Text="{Binding Nombre}" Detail="{Binding Fecha} "/>
+                <TextCell Text="{Binding Nombre}" Detail="{Binding Fecha} ">
+                    <TextCell.ContextActions>
+                        <MenuItem Clicked="taskComplete" Text="Completar" CommandParameter="{Binding}"/>
+                    </TextCell.ContextActions>
+                </TextCell>
             </DataTemplate>
         </ListView.ItemTemplate>
     </ListView>
